@@ -1,3 +1,9 @@
+2001-10-15  C. Scott Ananian  <cananian@alumni.princeton.edu>
+
+	* src/body.cpp (ProcessClassDeclaration): Hack to fix bug 1954:
+	patch 86 broke behavior of local classes in a static context; this
+	needs to be fixed correctly before 1.16 - patch 195.
+
 2001-10-15  Michael Ernst  <mernst@alum.mit.edu>
 
 	* src/stream.cpp:
